LatinoGangJS_BE/grammar/gen/LatinoGrammarParser.py
# Generated from C:/Users/londo/Documents/Estudio/Materias/Lenguajes de programación/Traductor/grammar/LatinoGrammar.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LatinoGrammarParser ( Parser ):

    grammarFileName = "LatinoGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'='", "<INVALID>", "<INVALID>", "'nulo'", 
                     "<INVALID>", "'leer'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'limpiar'", "<INVALID>", "'imprimirf'", "'romper'", 
                     "'caso'", "<INVALID>", "'elegir'", "'si'", "'osi'", 
                     "'sino'", "'fin'", "'mientras'", "'desde'", "'para'", 
                     "'en'", "'rango'", "'repetir'", "'hasta'", "'['", "']'", 
                     "'('", "')'", "'{'", "'}'", "'.'", "','", "':'", "';'" ]

    symbolicNames = [ "<INVALID>", "L_UNARY_OP", "NUMERIC_OP", "LOGIC_OP", 
                      "STRING_OP", "ASSIGN", "ASSIGN_OP", "BOOLEAN_VALS", 
                      "NULL_VAL", "OP_BUILTIN_FUNCS_ARG", "OP_BUILTIN_FUNCS_NO_ARG", 
                      "R_UNARY_OP", "FUNC_KEYWORD", "RETURN_KEYWORD", "BUILTIN_FUNC_NO_ARG", 
                      "BUILTIN_FUNC_SINGLE_ARG", "BUILTIN_FUNC_MULTI_ARG", 
                      "BREAK", "CASE", "DEF_CASE", "SWITCH", "IF", "ELSE_IF", 
                      "ELSE", "BLOCK_END", "WHILE", "FOR", "FOR_RANGE", 
                      "IN", "RANGE", "DO_WHILE_START", "DO_WHILE_END", "OPENING_BRA", 
                      "CLOSING_BRA", "OPENING_PAR", "CLOSING_PAR", "OPENING_KEY", 
                      "CLOSING_KEY", "PERIOD", "COMMA", "COLON", "SEMICOLON", 
                      "ID", "REAL", "STRING", "SPACE", "LINE_COMMENT", "MULTILINE_COMMENT" ]

    RULE_source = 0
    RULE_sentence = 1
    RULE_assignableID = 2
    RULE_assignableIDModifiers = 3
    RULE_listAccess = 4
    RULE_propertyAccess = 5
    RULE_assig = 6
    RULE_exp = 7
    RULE_binaryOp = 8
    RULE_terminal = 9
    RULE_opBuiltInTipo = 10
    RULE_assignableExp = 11
    RULE_functionCall = 12
    RULE_anonymousFuncDef = 13
    RULE_listDefinition = 14
    RULE_dictDefinition = 15
    RULE_optionalAssignableExpConcat = 16
    RULE_optAssigExpConcatWithTrail = 17
    RULE_functionReturn = 18
    RULE_builtInFuncSentence = 19
    RULE_codeBlock = 20
    RULE_functionBlock = 21
    RULE_whileBlock = 22
    RULE_forBlock = 23
    RULE_forRangeBlock = 24
    RULE_doWhileBlock = 25
    RULE_conditionalBlock = 26
    RULE_altCondition = 27
    RULE_noCondition = 28
    RULE_switchBlock = 29
    RULE_switchCasesDef = 30

    ruleNames =  [ "source", "sentence", "assignableID", "assignableIDModifiers", 
                   "listAccess", "propertyAccess", "assig", "exp", "binaryOp", 
                   "terminal", "opBuiltInTipo", "assignableExp", "functionCall", 
                   "anonymousFuncDef", "listDefinition", "dictDefinition", 
                   "optionalAssignableExpConcat", "optAssigExpConcatWithTrail", 
                   "functionReturn", "builtInFuncSentence", "codeBlock", 
                   "functionBlock", "whileBlock", "forBlock", "forRangeBlock", 
                   "doWhileBlock", "conditionalBlock", "altCondition", "noCondition", 
                   "switchBlock", "switchCasesDef" ]

    EOF = Token.EOF
    L_UNARY_OP=1
    NUMERIC_OP=2
    LOGIC_OP=3
    STRING_OP=4
    ASSIGN=5
    ASSIGN_OP=6
    BOOLEAN_VALS=7
    NULL_VAL=8
    OP_BUILTIN_FUNCS_ARG=9
    OP_BUILTIN_FUNCS_NO_ARG=10
    R_UNARY_OP=11
    FUNC_KEYWORD=12
    RETURN_KEYWORD=13
    BUILTIN_FUNC_NO_ARG=14
    BUILTIN_FUNC_SINGLE_ARG=15
    BUILTIN_FUNC_MULTI_ARG=16
    BREAK=17
    CASE=18
    DEF_CASE=19
    SWITCH=20
    IF=21
    ELSE_IF=22
    ELSE=23
    BLOCK_END=24
    WHILE=25
    FOR=26
    FOR_RANGE=27
    IN=28
    RANGE=29
    DO_WHILE_START=30
    DO_WHILE_END=31
    OPENING_BRA=32
    CLOSING_BRA=33
    OPENING_PAR=34
    CLOSING_PAR=35
    OPENING_KEY=36
    CLOSING_KEY=37
    PERIOD=38
    COMMA=39
    COLON=40
    SEMICOLON=41
    ID=42
    REAL=43
    STRING=44
    SPACE=45
    LINE_COMMENT=46
    MULTILINE_COMMENT=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SourceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LatinoGrammarParser.EOF, 0)

        def sentence(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatinoGrammarParser.SentenceContext)
            else:
                return self.getTypedRuleContext(LatinoGrammarParser.SentenceContext,i)


        def getRuleIndex(self):
            return LatinoGrammarParser.RULE_source

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSource" ):
                listener.enterSource(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSource" ):
                listener.exitSource(self)




    def source(self):

        localctx = LatinoGrammarParser.SourceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_source)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4399358538240) != 0):
                self.state = 62
                self.sentence()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(LatinoGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignableID(self):
            return self.getTypedRuleContext(LatinoGrammarParser.AssignableIDContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(LatinoGrammarParser.FunctionCallContext,0)


        def assig(self):
            return self.getTypedRuleContext(LatinoGrammarParser.AssigContext,0)


        def R_UNARY_OP(self):
            return self.getToken(LatinoGrammarParser.R_UNARY_OP, 0)

        def builtInFuncSentence(self):
            return self.getTypedRuleContext(LatinoGrammarParser.BuiltInFuncSentenceContext,0)


        def functionReturn(self):
            return self.getTypedRuleContext(LatinoGrammarParser.FunctionReturnContext,0)


        def doWhileBlock(self):
            return self.getTypedRuleContext(LatinoGrammarParser.DoWhileBlockContext,0)


        def codeBlock(self):
            return self.getTypedRuleContext(LatinoGrammarParser.CodeBlockContext,0)


        def opBuiltInTipo(self):
            return self.getTypedRuleContext(LatinoGrammarParser.OpBuiltInTipoContext,0)


        def BREAK(self):
            return self.getToken(LatinoGrammarParser.BREAK, 0)

        def getRuleIndex(self):
            return LatinoGrammarParser.RULE_sentence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentence" ):
                listener.enterSentence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentence" ):
                listener.exitSentence(self)




    def sentence(self):

        localctx = LatinoGrammarParser.SentenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentence)
        try:
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [42]:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.assignableID()
                self.state = 74
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [34]:
                    self.state = 71
                    self.functionCall()
                    pass
                elif token in [5, 6, 39]:
                    self.state = 72
                    self.assig()
                    pass
                elif token in [11]:
                    self.state = 73
                    self.match(LatinoGrammarParser.R_UNARY_OP)
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [14, 15, 16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.builtInFuncSentence()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 77
                self.functionReturn()
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 4)
                self.state = 78
                self.doWhileBlock()
                pass
            elif token in [12, 20, 21, 25, 26, 27]:
                self.enterOuterAlt(localctx, 5)
                self.state = 79
                self.codeBlock()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 6)
                self.state = 80
                self.opBuiltInTipo()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 7)
                self.state = 81
                self.match(LatinoGrammarParser.BREAK)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignableIDContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LatinoGrammarParser.ID, 0)

        def assignableIDModifiers(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatinoGrammarParser.AssignableIDModifiersContext)
            else:
                return self.getTypedRuleContext(LatinoGrammarParser.AssignableIDModifiersContext,i)


        def getRuleIndex(self):
            return LatinoGrammarParser.RULE_assignableID

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignableID" ):
                listener.enterAssignableID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignableID" ):
                listener.exitAssignableID(self)




    def assignableID(self):

        localctx = LatinoGrammarParser.AssignableIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignableID)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(LatinoGrammarParser.ID)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==32 or _la==38:
                self.state = 85
                self.assignableIDModifiers()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignableIDModifiersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listAccess(self):
            return self.getTypedRuleContext(LatinoGrammarParser.ListAccessContext,0)


        def propertyAccess(self):
            return self.getTypedRuleContext(LatinoGrammarParser.PropertyAccessContext,0)


        def getRuleIndex(self):
            return LatinoGrammarParser.RULE_assignableIDModifiers

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignableIDModifiers" ):
                listener.enterAssignableIDModifiers(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignableIDModifiers" ):
                listener.exitAssignableIDModifiers(self)




    def assignableIDModifiers(self):

        localctx = LatinoGrammarParser.AssignableIDModifiersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignableIDModifiers)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.listAccess()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.propertyAccess()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListAccessContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPENING_BRA(self):
            return self.getToken(LatinoGrammarParser.OPENING_BRA, 0)

        def exp(self):
            return self.getTypedRuleContext(LatinoGrammarParser.ExpContext,0)


        def CLOSING_BRA(self):
            return self.getToken(LatinoGrammarParser.CLOSING_BRA, 0)

        def getRuleIndex(self):
            return LatinoGrammarParser.RULE_listAccess

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListAccess" ):
                listener.enterListAccess(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListAccess" ):
                listener.exitListAccess(self)




    def listAccess(self):

        localctx = LatinoGrammarParser.ListAccessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_listAccess)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(LatinoGrammarParser.OPENING_BRA)
            self.state = 96
            self.exp()
            self.state = 97
            self.match(LatinoGrammarParser.CLOSING_BRA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropertyAccessContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PERIOD(self):
            return self.getToken(LatinoGrammarParser.PERIOD, 0)

        def ID(self):
            return self.getToken(LatinoGrammarParser.ID, 0)

        def getRuleIndex(self):
            return LatinoGrammarParser.RULE_propertyAccess

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPropertyAccess" ):
                listener.enterPropertyAccess(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPropertyAccess" ):
                listener.exitPropertyAccess(self)




    def propertyAccess(self):

        localctx = LatinoGrammarParser.PropertyAccessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_propertyAccess)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(LatinoGrammarParser.PERIOD)
            self.state = 100
            self.match(LatinoGrammarParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(LatinoGrammarParser.ASSIGN, 0)

        def assignableExp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatinoGrammarParser.AssignableExpContext)
            else:
                return self.getTypedRuleContext(LatinoGrammarParser.AssignableExpContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LatinoGrammarParser.COMMA)
            else:
                return self.getToken(LatinoGrammarParser.COMMA, i)

        def assignableID(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatinoGrammarParser.AssignableIDContext)
            else:
                return self.getTypedRuleContext(LatinoGrammarParser.AssignableIDContext,i)


        def ASSIGN_OP(self):
            return self.getToken(LatinoGrammarParser.ASSIGN_OP, 0)

        def getRuleIndex(self):
            return LatinoGrammarParser.RULE_assig

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssig" ):
                listener.enterAssig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssig" ):
                listener.exitAssig(self)




    def assig(self):

        localctx = LatinoGrammarParser.AssigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assig)
        self._la = 0 # Token type
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 39]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==39:
                    self.state = 102
                    self.match(LatinoGrammarParser.COMMA)
                    self.state = 103
                    self.assignableID()
                    self.state = 108
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 109
                self.match(LatinoGrammarParser.ASSIGN)
                self.state = 110
                self.assignableExp()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==39:
                    self.state = 111
                    self.match(LatinoGrammarParser.COMMA)
                    self.state = 112
                    self.assignableExp()
                    self.state = 117
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.match(LatinoGrammarParser.ASSIGN_OP)
                self.state = 119
                self.assignableExp()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def terminal(self):
            return self.getTypedRuleContext(LatinoGrammarParser.TerminalContext,0)


        def binaryOp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatinoGrammarParser.BinaryOpContext)
            else:
                return self.getTypedRuleContext(LatinoGrammarParser.BinaryOpContext,i)


        def getRuleIndex(self):
            return LatinoGrammarParser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)




    def exp(self):

        localctx = LatinoGrammarParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_exp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.terminal()
            self.state = 126
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 123
                    self.binaryOp() 
                self.state = 128
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BinaryOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def terminal(self):
            return self.getTypedRuleContext(LatinoGrammarParser.TerminalContext,0)


        def L_UNARY_OP(self):
            return self.getToken(LatinoGrammarParser.L_UNARY_OP, 0)

        def NUMERIC_OP(self):
            return self.getToken(LatinoGrammarParser.NUMERIC_OP, 0)

        def LOGIC_OP(self):
            return self.getToken(LatinoGrammarParser.LOGIC_OP, 0)

        def STRING_OP(self):
            return self.getToken(LatinoGrammarParser.STRING_OP, 0)

        def getRuleIndex(self):
            return LatinoGrammarParser.RULE_binaryOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinaryOp" ):
                listener.enterBinaryOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinaryOp" ):
                listener.exitBinaryOp(self)




    def binaryOp(self):

        localctx = LatinoGrammarParser.BinaryOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_binaryOp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 130
            self.terminal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerminalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPENING_PAR(self):
            return self.getToken(LatinoGrammarParser.OPENING_PAR, 0)

        def exp(self):
            return self.getTypedRuleContext(LatinoGrammarParser.ExpContext,0)


        def CLOSING_PAR(self):
            return self.getToken(LatinoGrammarParser.CLOSING_PAR, 0)

        def REAL(self):
            return self.getToken(LatinoGrammarParser.REAL, 0)

        def STRING(self):
            return self.getToken(LatinoGrammarParser.STRING, 0)

        def BOOLEAN_VALS(self):
            return self.getToken(LatinoGrammarParser.BOOLEAN_VALS, 0)

        def NULL_VAL(self):
            return self.getToken(LatinoGrammarParser.NULL_VAL, 0)

        def ID(self):
            return self.getToken(LatinoGrammarParser.ID, 0)

        def assignableIDModifiers(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatinoGrammarParser.AssignableIDModifiersContext)
            else:
                return self.getTypedRuleContext(LatinoGrammarParser.AssignableIDModifiersContext,i)


        def functionCall(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatinoGrammarParser.FunctionCallContext)
            else:
                return self.getTypedRuleContext(LatinoGrammarParser.FunctionCallContext,i)


        def L_UNARY_OP(self):
            return self.getToken(LatinoGrammarParser.L_UNARY_OP, 0)

        def opBuiltInTipo(self):
            return self.getTypedRuleContext(LatinoGrammarParser.OpBuiltInTipoContext,0)


        def OP_BUILTIN_FUNCS_NO_ARG(self):
            return self.getToken(LatinoGrammarParser.OP_BUILTIN_FUNCS_NO_ARG, 0)

        def listDefinition(self):
            return self.getTypedRuleContext(LatinoGrammarParser.ListDefinitionContext,0)


        def dictDefinition(self):
            return self.getTypedRuleContext(LatinoGrammarParser.DictDefinitionContext,0)


        def getRuleIndex(self):
            return LatinoGrammarParser.RULE_terminal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerminal" ):
                listener.enterTerminal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerminal" ):
                listener.exitTerminal(self)




    def terminal(self):

        localctx = LatinoGrammarParser.TerminalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_terminal)
        try:
            self.state = 161
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [34]:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.match(LatinoGrammarParser.OPENING_PAR)
                self.state = 133
                self.exp()
                self.state = 134
                self.match(LatinoGrammarParser.CLOSING_PAR)
                pass
            elif token in [43]:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.match(LatinoGrammarParser.REAL)
                pass
            elif token in [44]:
                self.enterOuterAlt(localctx, 3)
                self.state = 137
                self.match(LatinoGrammarParser.STRING)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 138
                self.match(LatinoGrammarParser.BOOLEAN_VALS)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 139
                self.match(LatinoGrammarParser.NULL_VAL)
                pass
            elif token in [42]:
                self.enterOuterAlt(localctx, 6)
                self.state = 140
                self.match(LatinoGrammarParser.ID)
                self.state = 144
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 141
                        self.assignableIDModifiers() 
                    self.state = 146
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

                self.state = 150
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 147
                        self.functionCall() 
                    self.state = 152
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
